components/consumer/mobile/button/style.scss
@import '../../shared/scss/styleguide';

.pbg-consumer-mobile {
  &.pbg-button {
    border: 0;
    cursor: pointer;
    font-family: Roboto;
    font-style: normal;
    font-weight: normal;
    font-size: $large-font;
    line-height: $large-line-height;
    text-align: center;
    width: 100%;

    > span {
      padding: 16px;
    }

    &.pbg-button-primary {
      background: $blue-linear;
      border-radius: 31px;
      color: $white;
      height: 47px;
    }

    &.pbg-button-secondary {
      background: $pale-grey;
      border: 0;
      border-radius: 31px;
      color: $cool-grey;
      height: 47px;
    }

    &.pbg-button-small {
      background: $pale-grey;
      border: 0;
      border-radius: 31px;
      color: $clear-blue;
      font-size: $small-font;
      line-height: $small-line-height;
      height: 26px;
    }

    &.pbg-button-link {
      background: none;
      border: 0;
      color: $clear-blue;
      font-size: 14px;
      line-height: 20px;

      > span {
        padding: 0;
      }
    }

    &.pbg-button-facebook {
      background: $facebook-color;
      border-radius: 4px;
      color: $white;
      height: 47px;
      display: flex;
      align-items: center;
      align-content: center;
      justify-content: center;

      &:before {
        content: '';
        background: $facebook-logo;
        width: 18px;
        height: 18px;
        background-size: contain;
      }

      span {
        padding: 0 0 0 16px;
      }
    }

    &.pbg-button-facebook-small {
      background: $facebook-color;
      border-radius: 4px;
      color: $white;
      font-size: $small-font;
      line-height: $small-line-height;
      height: 26px;
      display: flex;
      align-items: center;
      align-content: center;
      justify-content: center;

      &:before {
        content: '';
        background: $facebook-logo;
        width: 18px;
        height: 18px;
        background-size: contain;
      }

      span {
        padding: 0 0 0 8px;
      }
    }

    &.disabled {
        opacity: 0.65;
      }
  }
}

.pbg-button-hint-container {
  text-align: center;
}

